# rustybuzz

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  run-tests.sh  show-diff.sh
.github/workflows/: main.yml
benches/: Cargo.toml  README.md  arabic.txt  rustfmt.toml
benches/fonts/: NotoSansDevanagari-LICENSE-OFL.txt  NotoSansHebrew-LICENSE-OFL.txt  NotoSansKhmer-LICENSE-OFL.txt
benches/src/: lib.rs
benches/texts/arabic/: paragraph_long.txt  paragraph_medium.txt  paragraph_short.txt  sentence_1.txt  sentence_2.txt  word_1.txt  word_2.txt  word_3.txt
benches/texts/english/: long_zalgo.txt  paragraph_long.txt  paragraph_medium.txt  paragraph_short.txt  sentence_1.txt  sentence_2.txt  short_zalgo.txt  word_2.txt  word_3.txt  word_4.txt
benches/texts/hebrew/: paragraph_long_1.txt  paragraph_long_2.txt  paragraph_medium.txt  sentence_1.txt  sentence_2.txt  word_1.txt  word_2.txt
benches/texts/hindi/: paragraph_long.txt  paragraph_medium.txt  paragraph_short.txt  sentence_1.txt  sentence_2.txt  word_1.txt  word_2.txt
benches/texts/khmer/: paragraph_long_1.txt  paragraph_long_2.txt  paragraph_medium.txt  sentence_1.txt  sentence_2.txt  word_1.txt  word_2.txt  word_3.txt
benches/texts/myanmar/: paragraph_long.txt  paragraph_medium.txt  paragraph_short.txt  sentence_1.txt  sentence_2.txt  word_1.txt  word_2.txt
benches/texts/thai/: paragraph_long.txt  paragraph_medium.txt  paragraph_short.txt  sentence_1.txt  word_1.txt  word_2.txt
docs/: backporting.md  ragel.md
examples/: shape.rs  shaped-text2svg.rs
harfbuzz/: README.md  harfbuzz.pro
harfbuzz/src/: config.h  hb-aat-fdsc-table.hh  hb-aat-layout-ankr-table.hh  hb-aat-layout-bsln-table.hh  hb-aat-layout-common.hh  hb-aat-layout-feat-table.hh  hb-aat-layout-just-table.hh  hb-aat-layout-kerx-table.hh  hb-aat-layout-lcar-table.hh  hb-aat-layout-morx-table.hh  hb-aat-layout-trak-table.hh  hb-aat-layout.cc  hb-aat-layout.h  hb-aat-layout.hh  hb-aat-ltag-table.hh  hb-aat-map.cc  hb-aat-map.hh  hb-aat.h  hb-algs.hh  hb-array.hh  hb-atomic.hh  hb-blob.cc  hb-blob.h  hb-blob.hh  hb-buffer-deserialize-json.hh  hb-buffer-deserialize-text.hh  hb-buffer-serialize.cc  hb-buffer.cc  hb-buffer.h  hb-buffer.hh  hb-cache.hh  hb-cff-interp-common.hh  hb-cff-interp-cs-common.hh  hb-cff-interp-dict-common.hh  hb-cff1-interp-cs.hh  hb-cff2-interp-cs.hh  hb-common.cc  hb-common.h  hb-config.hh  hb-debug.hh  (+139 more)
scripts/: .gitignore  README.md  gen-arabic-table.py  gen-indic-table.py  gen-shaping-tests.py  gen-tag-table.py  gen-unicode-is-emoji-ext-pict.py  gen-unicode-norm-table.py  gen-universal-table.py  gen-use-table.py  gen-vowel-constraints.py  macos.tests
scripts/ms-use/: IndicPositionalCategory-Additional.txt  IndicSyllabicCategory-Additional.txt
src/: buffer.rs  common.rs  face.rs  fallback.rs  ffi.rs  font.rs  glyph_set.rs  lib.rs  map.rs  normalize.rs  ot_layout.rs  ot_layout_gpos_table.rs  ot_layout_gsub_table.rs  ot_map.rs  ot_shape_complex_arabic.rs  ot_shape_complex_arabic_table.rs  ot_shape_fallback.rs  ot_shape_normalize.rs  plan.rs  scan.rs  shape.rs  shape_plan.rs  tag.rs  tag_table.rs  text_parser.rs  unicode.rs  unicode_norm.rs
src/aat/: extended_kerning.rs  feature_mappings.rs  feature_selector.rs  map.rs  metamorphosis.rs  mod.rs  tracking.rs
src/complex/: arabic.rs  arabic_table.rs  hangul.rs  hebrew.rs  indic.rs  indic_machine.rl  indic_machine.rs  indic_table.rs  khmer.rs  khmer_machine.rl  khmer_machine.rs  machine_cursor.rs  mod.rs  myanmar.rs  myanmar_machine.rl  myanmar_machine.rs  syllabic.rs  thai.rs  universal.rs  universal_machine.rl  universal_machine.rs  universal_table.rs  vowel_constraints.rs
src/hb/: aat_layout.rs  aat_layout_common.rs  aat_layout_kerx_table.rs  aat_layout_morx_table.rs  aat_map.rs  (+72 more)
tests/: shaping_aots.rs  shaping_extra.rs  shaping_impl.rs  shaping_in_house.rs  shaping_text_rendering_tests.rs  shaping_unicode_org.rs
(+100 files in other folders)
