[package]
name = "rustybuzz"
version = "0.5.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "A complete harfbuzz shaping algorithm port to Rust."
documentation = "https://docs.rs/rustybuzz/"
readme = "README.md"
repository = "https://github.com/RazrFalcon/rustybuzz"
license = "MIT"
keywords = ["text", "shaping", "opentype", "truetype"]
categories = ["text-processing"]
exclude = ["benches/**"]

[dependencies]
bitflags = "1.2"
bytemuck = { version = "1.5", features = ["extern_crate_alloc"] }
smallvec = "1.6"
ttf-parser = "0.15"
unicode-bidi-mirroring = "0.1"
unicode-ccc = "0.1.2"
unicode-general-category = "0.4"
unicode-script = "0.5.2"

[dev-dependencies]
pico-args = "0.3"
libc = "0.2"
