[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
harfbuzz_rs = {git = "https://github.com/LaurenzV/harfbuzz_rs", rev = "e00dd7f"}
rustybuzz = { path = "../" }

[features]
default = ["hb", "rb", "english", "arabic", "khmer", "hebrew", "myanmar", "hindi"]
hb = []
rb = []
english = []
arabic = []
khmer = []
hebrew = []
myanmar = []
hindi = []
