[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
harfbuzz_rs = {git = "https://github.com/harfbuzz/harfbuzz_rs/", rev = "43f0fb5"}
rustybuzz = { path = "../" }

[features]
default = ["hb", "rb", "english", "arabic", "khmer", "hebrew", "myanmar", "hindi", "thai", "macos"]
hb = []
rb = []
english = []
arabic = []
khmer = []
hebrew = []
myanmar = []
hindi = []
thai = []
macos = []
